Fix button contrast

--- a/style.css
+++ b/style.css
@@ -350,9 +350,9 @@ textarea {
 
 .project-button:hover,
 .resume-button:hover {
-  border-color: #6070ff;
+  border-color: #4958dd;
   color: white;
-  background-color: #6070ff;
+  background-color: #4958dd;
 }
 
 .menu-desktop {
